Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjIntObjField.quorum
class Main
    Integer i
    action Main
        number num = 0.0
        i:SetValue(5)
        num = cast(number, i)
        if num:GetValue() = 5.0
            output "passed"
        end
    end
end